Resolved merge conflicts from alex into main

--- a/MajorHelp/static/css/common/styles.css
+++ b/MajorHelp/static/css/common/styles.css
@@ -1,4 +1,10 @@
 /* Navbar styling */
+
+body, html {
+    height: auto;
+    overflow-y: auto;
+}
+
 nav {
     background-color: #ffffff;
     padding: 10px;
