--- a/MajorHelp/static/css/overview/MajorOverview.css
+++ b/MajorHelp/static/css/overview/MajorOverview.css
@@ -113,10 +113,55 @@ button:hover {
     color: #000;
     border-radius: 5px;
     position: absolute;
-    top: 110px;
-    left:30px;
+    top: 120px;
+    left:40px;
 }
 
 .back-button:hover {
     background-color: #f0f0f0;
+}
+/* favorite button styling */
+.favorite-btn {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+    border-radius: 5px;
+    position: absolute;
+    top: 120px;
+    right: 40px; 
+}
+
+.favorite-btn:hover {
+    background-color: #f0f0f0;
+    border-color:#f0f0f0;
+}
+
+.favorite-btn.favorited {
+    background-color: #ffd700; 
+    color: #000;
+    border-color: #ffd700;
+}
+
+/* Login link styling */
+.login-link {
+    position: absolute;
+    top: 170px; /* Positioned below the favorite button */
+    right: 40px;
+    margin: 0;
+    font-size: 14px;
+    color: #333;
+    text-align: right;
+}
+
+.login-link a {
+    color: #004080;
+    text-decoration: none;
+}
+
+.login-link a:hover {
+    text-decoration: underline;
 }
