--- a/MajorHelp/static/css/signup/signup.css
+++ b/MajorHelp/static/css/signup/signup.css
@@ -1,4 +1,10 @@
 /* signup.css */
+body {
+    height: 100vh; 
+    background: linear-gradient(45deg, #4FC7CF, #15787f);
+    background-size: 300% 300%;
+    animation: gradientAnimation 6s ease infinite; 
+}
 
 /* Overall Signup Container */
 .signup-container {
@@ -70,11 +76,11 @@
 /* Input Fields */
 .signup-form input,
 .signup-form select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1rem;
+	width: 100%;
+	padding: 10px 3.5% 10px 0px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	font-size: 1rem;
 }
 
 /* Confirm Button */
