--- a/MajorHelp/templates/About/about.html
+++ b/MajorHelp/templates/About/about.html
@@ -7,8 +7,16 @@
 {% block content %}
 
 <style>
+    
+    body {
+    height: 100vh; 
+    background: linear-gradient(45deg, #4FC7CF, #15787f);
+    background-size: 300% 300%;
+    animation: gradientAnimation 6s ease infinite; 
+}
+
     .content-box {
-        max-width: 900px; 
+        max-width: 1400px; 
         background-color: #fff; /* White background for the content box */
         padding: 20px; /* Adds padding inside the box */
         margin: 0 auto; /* Centers the box */
