--- a/MajorHelp/templates/registration/login.html
+++ b/MajorHelp/templates/registration/login.html
@@ -4,7 +4,8 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="login-container" style="background-image: url('{% static 'images/login/login.png' %}');">
+<link rel="stylesheet" href="{% static 'css/login/login.css' %}">
+<div class="login-container" style="background-image: url('{% static 'images/login/logn.png' %}');">
     <div class="login-form-wrapper">
         <h2>Login</h2>
         <form method="post" class="login-form">
