--- a/MajorHelp/static/css/login/login.css
+++ b/MajorHelp/static/css/login/login.css
@@ -5,6 +5,21 @@ body {
     animation: gradientAnimation 6s ease infinite; 
 }
 
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../../images/login/login.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(3px);
+    z-index: -1;
+}
+
 /* Keyframes for the gradient animation */
 @keyframes gradientAnimation {
     0% {
