--- a/MajorHelp/templates/settings.html
+++ b/MajorHelp/templates/settings.html
@@ -16,6 +16,9 @@
     </div>
     
     <div class="settings-actions">
+        <a href="{% url 'MajorHelp:favorites-list' %}">
+            <button class="change-password-button">View Favorites</button>
+        </a>
         <a href="{% url 'password_change' %}">
             <button class="change-password-button">Change Password</button>
         </a>
