Resolved merge conflicts from alex into main

--- a/MajorHelp/templates/search/major_results.html
+++ b/MajorHelp/templates/search/major_results.html
@@ -4,7 +4,7 @@
 {% block title %}Major Search Results{% endblock %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="{% static 'css/search/search_results.css' %}">"
+<link rel="stylesheet" href="{% static 'css/search/search_results.css' %}">
 {% endblock %}
 
 {% block script %}
